# First-ML-Project

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
scripts/: benchmark_speed.py  create_algorithm_demo.py  create_architecture_diagram.py  create_problem_plot.py  dev_init.py  dev_set_db.py  dev_test_monitor.py  dev_test_websocket.py  print.py  test_monitor.py  test_websocket.py
src/: config.py  data_fetcher.py  initialize.py  main.py  model.py  monitor.py
src/database/: crud.py  models.py
tests/: test_database.py  test_datafetcher.py  test_model.py  test_monitor.py  test_project.py
