[tool.poetry]
name = "crypto-monitoring"
version = "0.1.0"
description = "Real-time ETHUSDT price movement monitor decoupled from BTC influence"
authors = ["Hiro037 <saidmagomedov037@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
anyio = "^4.0"
sqlalchemy = "^2.0"
asyncpg = ">=0.30.0"
pydantic-settings = "^2.4"
databases = "^0.9.0"
aiohttp = "^3.12.15"
pandas = "^2.3.2"
numpy = "^2.3.2"


[tool.poetry.group.dev.dependencies]
black = "^24.4"
isort = "^5.13"
flake8 = "^7.0"
mypy = "^1.9"
pytest = "^7.4"
pytest-asyncio = "^0.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"